fixed bugs where ratings were not showing, added readme

--- a/scrimba-airbnb/src/App.css
+++ b/scrimba-airbnb/src/App.css
@@ -7,4 +7,6 @@
 
 body {
   margin: 0;
+  /* width: 550px;
+  height: 853px; */
 }
